--- a/style.css
+++ b/style.css
@@ -28,8 +28,12 @@ background-color: #282828;
   color: whitesmoke
 }
 
+.side{
+  flex: 1 0 0;
+}
+
 #calculator {
-  width: 500px;
+  flex: 2 0 0;
   padding: 20px;
   border-radius: 25px;
   background-color: #181818;
@@ -38,18 +42,18 @@ background-color: #282828;
 }
 
 #screen{
-  height: 100px;
+  height: 20%;
   background-color: whitesmoke;
   justify-content: end;
 }
 
 #space{
-  height: 30px;
+  height: 5%;
   background-color: #181818;
 }
 
 #layout{
-  height: 500px;
+  height: 75%;
 }
 
 #left{
@@ -73,7 +77,7 @@ button{
   border-radius: 10px;
   color: #FFFFFF;
 
-  font-size: 50px;
+  font-size: 40px;
   text-align: center;
 }
 
@@ -95,7 +99,6 @@ button{
 #display {
   text-align: center;
   vertical-align: middle;
-  line-height: 100px;
   font-size: 100px;
 }
 
